# cc-island

./: .gitignore  CLAUDE.md  LICENSE  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.omc/: project-memory.json
cloud-server/: .env.example  Cargo.toml  README.md  docker-compose.yml
cloud-server/.omc/: project-memory.json
cloud-server/.omc/state/: agent-replay-dc4b555a-aa1a-4c8b-be60-1a8aeedddecc.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
cloud-server/.omc/state/checkpoints/: checkpoint-2026-04-17T14-58-45-364Z.json  checkpoint-2026-04-18T08-32-05-816Z.json
cloud-server/.sqlx/: query-65b71616d7987c0837e52127c18dddcc9b7bde33a7d3ff4c3e67eddb1834f11e.json  query-85275f3819fb8a61ae5b247092d87ece05c112aff55a2dcb45023d0e538c0e36.json  query-8705dd209c44ac3c9a796462c7fcd216b963b53a1adc063e53f9d7d8f4c12258.json  query-88e9c7be9573607913c834ddd9c390c19b088c28233f4cb6f3fa6fd6df222c6c.json  query-8a5cf6e77886ac30d8c335747cfdcbea2807505f847c84de38e3f1c09e9260bb.json  query-bbbf85a2e6886a91d396b4d21e8b3e368107ba67ccc93b8a4d92e5a6f1a4d969.json  query-d35f60677b106f43d3988e5366c23f31a201aa81c4f683736b6ac55a9e854994.json  query-f916e58eacde39d8040e69f3dacb6b455c6b597518800d98573e8f25039448c8.json
cloud-server/docs/: fd-leak-fix.md
cloud-server/migrations/: 001_init.sql  002_chat.sql  003_device_info.sql  004_pending_messages.sql
cloud-server/src/: config.rs  http.rs  lib.rs  main.rs  messages.rs
cloud-server/src/cache/: mod.rs  state_cache.rs
cloud-server/src/db/: mod.rs  models.rs  pending_message.rs  pool.rs  repository.rs
cloud-server/src/ws/: connection.rs  handler.rs  mod.rs  notify_listener.rs  router.rs  server.rs
cloud-server/tests/: connection_integration_test.rs  handler_integration_test.rs  handler_test.rs  http_api_test.rs  integration_test.rs  messages_test.rs  notify_listener_integration_test.rs  notify_listener_test.rs  notify_test.rs  repository_test.rs  router_test.rs  routing_test.rs
cloud-server/tools/: query_sessions.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/: project-memory.json
src-tauri/.omc/state/: agent-replay-dc4b555a-aa1a-4c8b-be60-1a8aeedddecc.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
src-tauri/.omc/state/checkpoints/: checkpoint-2026-04-18T00-59-40-446Z.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_token.rs
src-tauri/icons/: icon.icns
src-tauri/src/: chat_messages.rs  cloud_client.rs  config.rs  conversation_parser.rs  hook_handler.rs  http_server.rs  instance_manager.rs  jsonl_watcher.rs  lib.rs  machine_id.rs  main.rs  popup_queue.rs  websocket_server.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+96 files in other folders)
