[package]
name = "cc-island"
version = "0.1.0"
description = "Dynamic Island for Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "cc_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-routing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sysinfo = "0.33"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
